--- a/styles.css
+++ b/styles.css
@@ -301,6 +301,7 @@ main {
 	position:relative;
 	margin-top: 30px;
 	margin-bottom: 20px;
+	text-align: center;
 }
 .big_title { 
 	color:var(--primary-color);
